--- a/wp-content/themes/the-thinker-lite/changelog.txt
+++ b/wp-content/themes/the-thinker-lite/changelog.txt
@@ -1,5 +1,14 @@
 = The Thinker Lite change log =
 
+Version 1.1.5 - November 19, 2018
+- improved support for the new WordPress editor
+
+Version 1.1.4 - August 3, 2018
+- added basic support for the new WordPress editor
+
+Version 1.1.3 - May 24, 2018
+- support for the new 4.9.6 WordPress changes regarding GDPR
+
 Version 1.1.2 - February 20, 2018
 - theme accessibility improvements
 
